--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>交互式tree可视编辑器</title><script defer="defer" src="./static/js/main.342579ec.js"></script><link href="./static/css/main.9b89cec3.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>交互式tree可视编辑器</title>
+    <script defer="defer" src="/tree-editor/static/js/main.342579ec.js"></script>
+    <link href="/tree-editor/static/css/main.9b89cec3.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
+</html>
